--- a/views/users/ban.ejs
+++ b/views/users/ban.ejs
@@ -76,6 +76,9 @@
                 <h2 class="m-b-md">
                     Dear user, your account has been temporarily banned for violating community guidelines. 
                 If you believe this is a mistake, please email us at <a href="mailto:menshub@gmail.com">menshub@gmail.com</a>, and our admins will review your case.</h2>
+                <br>
+                <br>
+                <a href="/logout">logout</a>
             </div>
         </div>
     </body>
