--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -55,6 +55,7 @@
       <%- include("./layouts/footer.ejs") %>
 
       <!-- scripts -->
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/tiny-slider.js"></script>
       <script src="js/custom.js"></script>
