--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -22,6 +22,8 @@
         <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
           <a class="sidebar-brand brand-logo" href="index.html">MEN'S HUB </a>
           <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="/images/logo-mini.svg" alt="logo" /></a>
+          <a href="/home"><img style="width: 30px;height: 30px;" src="/images/img/home-logo/home2.png" alt="To home"></a>
+
         </div>
         <ul class="nav">
           <li class="nav-item menu-items">
