--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -353,6 +353,34 @@
               </div>
             </div>
           </div>
+          <nav aria-label="Page navigation">
+                      <ul class="pagination justify-content-center">
+                        <!-- Previous Page Link -->
+                        <% if (currentPage > 1) { %>
+                          <li class="page-item">
+                            <a class="page-link" href="?page=<%= currentPage - 1 %>" aria-label="Previous">
+                              <span aria-hidden="true">&laquo;</span>
+                            </a>
+                          </li>
+                        <% } %>
+                    
+                        <!-- Page Number Links -->
+                        <% for (let i = 1; i <= totalPages; i++) { %>
+                          <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                            <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                          </li>
+                        <% } %>
+                    
+                        <!-- Next Page Link -->
+                        <% if (currentPage < totalPages) { %>
+                          <li class="page-item">
+                            <a class="page-link" href="?page=<%= currentPage + 1 %>" aria-label="Next">
+                              <span aria-hidden="true">&raquo;</span>
+                            </a>
+                          </li>
+                        <% } %>
+                      </ul>
+                    </nav>
         </div>
         <div
           class="modal fade"
@@ -666,6 +694,7 @@
                       <input
                         type="checkbox"
                         class="form-check-input"
+     
                         id="toggleWarranty"
                         onclick="toggleWarrantyInput()"
                       />
@@ -720,9 +749,10 @@
                 </form>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
+            </div>
+            </div>
+            </div>
+            
     </div>
     <script src="https://unpkg.com/cropperjs@1.5.12/dist/cropper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
