--- a/views/users/myAddress.ejs
+++ b/views/users/myAddress.ejs
@@ -69,44 +69,45 @@
           <button class="add-address">Create</button>
         </form>
         <% address.forEach(data=>{ %>
-          <div class="address-box" >
+          <div data-id="<%= data._id %>" class="address-box" >
             <div class="address-boxes">
-          <p>House Number: <%= data.houseNumber %></p>
-          <p>Street: <%= data.street %></p>
-          <p>Landmark: <%= data.landmark %></p>
-          <p>City: <%= data.city %></p>
-          <p>District: <%= data.district %></p>
-          <p>State: <%= data.state %></p>
-          <p>Country: <%= data.country %></p>
-          <p>Pin Code: <%= data.pinCode %></p>
-        </div>
-          <div>
-            <button class="edit-address" onclick="addressEditForm(event)">EDIT</button>
-            <button class="remove-address">REMOVE</button>
+              <p>House Number: <%= data.houseNumber %></p>
+              <p>Street: <%= data.street %></p>
+              <p>Landmark: <%= data.landmark %></p>
+              <p>City: <%= data.city %></p>
+              <p>District: <%= data.district %></p>
+              <p>State: <%= data.state %></p>
+              <p>Country: <%= data.country %></p>
+              <p>Pin Code: <%= data.pinCode %></p>
+            </div>
+            <div>
+              <button class="edit-address" data-id="<%= data._id %>" >EDIT</button>
+              <button class="remove-address">REMOVE</button>
+            </div>
+            <!-- Edit Form for this address -->
+            <form class="edit-address-form" data-id="<%= data._id %>" style="display: none;">
+              <input type="text" name="" class="EhouseNumber" value="<%= data.houseNumber %>" placeholder="House Number">
+              <p class="EhouseNumberError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <input type="text" name="" class="Estreet" value="<%= data.street %>" placeholder="Street">
+              <p class="EstreetError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <input type="text" name="" class="Ecity" value="<%= data.city %>" placeholder="City">
+              <p class="EcityError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <input type="text" name="" class="Elandmark" value="<%= data.landmark %>" placeholder="Landmark">
+              <p class="ElandmarkError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <input type="text" name="" class="Edistrict" value="<%= data.district %>" placeholder="District">
+              <p class="EdistrictError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <input type="text" name="" class="Estate" value="<%= data.state %>" placeholder="State">
+              <p class="EstateError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <input type="text" name="" class="ECountry" value="<%= data.country %>" placeholder="Country">
+              <p class="ECountryError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <input type="text" name="" class="EpinCode" value="<%= data.pinCode %>" placeholder="Pin Code">
+              <p class="EpinCodeError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
+              <button type="submit" class="edit-address-btn">Save</button>
+            </form>
           </div>
-        
-          <form id="editaddressForm" style="display: none;" onsubmit="editaddressFormValidation(event)">
-            <input type="text" name="" id="EhouseNumber" placeholder="House Number" value="<%= data.houseNumber %>">
-            <p id="EhouseNumberError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <input type="text" name="" id="Estreet" placeholder="Street" value="<%= data.street %>">
-            <p id="EstreetError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <input type="text" name="" id="Ecity" placeholder="City" value="<%= data.city %>"><br>
-            <p id="EcityError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <input type="text" name="" id="Elandmark" placeholder="Landmark" value="<%= data.landmark %>">
-            <p id="ElandmarkError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <input type="text" name="" id="Edistrict" placeholder="District" value="<%= data.district %>">
-            <p id="EdistrictError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <input type="text" name="" id="Estate" placeholder="State" value="<%= data.state %>">
-            <p id="EstateError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <input type="text" name="" id="ECountry" placeholder="Country" value="<%= data.country %>">
-            <p id="ECountryError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <input type="text" name="" id="EpinCode" placeholder="Pin Code" value="<%= data.pinCode %>">
-            <p id="EpinCodeError" style="color: red; font-size: 14px; margin-top: 5px;" ></p>
-            <button class="edit-address">Create</button>
-          </form>
-        </div>
         <% }) %>
-        </div>
+        
+      </div>
       </div>
     </div>
     <%- include("./layouts/footer.ejs") %>
