checked the branch

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -32,7 +32,7 @@
           </div>
       </form>
     
-      <div class="divider">- OR -</div>
+      <div class="divider">- OR - NIhal B</div>
       <h2>LOGIN</h2>
       <form id="loginform">
         <input type="email" id="userName-email" placeholder="Your Email or Username" >
